# Advent-of-Code-2024

./: .gitignore  README.md  pyproject.toml
inputs/: note.txt
src/advent_of_code_2024/: __init__.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_17.py  day_19.py  day_20.py  day_22.py  day_24.py  fetch_inputs.py  utils.py
