[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "ipython>=8.30.0",
    "rich>=13.9.4",
]

[project.scripts]
hello = "advent_of_code_2024:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
