[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "altair>=5.5.0",
    "ipython>=8.30.0",
    "numpy>=2.1.3",
    "polars>=1.16.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
    "vl-convert-python>=1.7.0",
]

[project.scripts]
fetch = "advent_of_code_2024:fetch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
